[gd_scene load_steps=8 format=3 uid="uid://d3in1ugpkfie4"]

[ext_resource type="Script" uid="uid://dfr4nyytmgyv8" path="res://scenes/ui/main.gd" id="1_cc00j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Button_Hover"]
bg_color = Color(0.407843, 0.85098, 0.537255, 1)
border_width_bottom = 3
border_color = Color(0.207843, 0.54902, 0.301961, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 4.0
expand_margin_top = 1.0
expand_margin_right = 4.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Button_Normal"]
bg_color = Color(0.32549, 0.760784, 0.45098, 1)
border_width_bottom = 3
border_color = Color(0.207843, 0.54902, 0.301961, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 4.0
expand_margin_top = 1.0
expand_margin_right = 4.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Button_Pressed"]
bg_color = Color(0.207843, 0.54902, 0.301961, 1)
border_width_top = 2
border_color = Color(0.145098, 0.4, 0.215686, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
expand_margin_left = 4.0
expand_margin_top = 1.0
expand_margin_right = 4.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Panel_Bg"]
bg_color = Color(0.960784, 0.960784, 0.980392, 1)
border_width_left = 4
border_color = Color(0.901961, 0.901961, 0.921569, 1)
corner_radius_top_left = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.117647)
shadow_size = 8

[sub_resource type="Theme" id="Theme_UmaStyle_Compact"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(0.168627, 0.443137, 0.239216, 1)
Button/constants/outline_size = 2
Button/font_sizes/font_size = 14
Button/styles/hover = SubResource("StyleBoxFlat_Button_Hover")
Button/styles/normal = SubResource("StyleBoxFlat_Button_Normal")
Button/styles/pressed = SubResource("StyleBoxFlat_Button_Pressed")
Label/colors/font_color = Color(0.2, 0.2, 0.2, 1)
Panel/styles/panel = SubResource("StyleBoxFlat_Panel_Bg")

[sub_resource type="GDScript" id="GDScript_njtbt"]
script/source = "extends Control


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_cc00j")

[node name="RootContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_UmaStyle_Compact")
script = SubResource("GDScript_njtbt")

[node name="MainHBox" type="HBoxContainer" parent="RootContainer"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="GameViewportContainer" type="SubViewportContainer" parent="RootContainer/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="GameViewport" type="SubViewport" parent="RootContainer/MainHBox/GameViewportContainer"]
handle_input_locally = false
size = Vector2i(852, 648)
render_target_update_mode = 4

[node name="RightPanel" type="Panel" parent="RootContainer/MainHBox"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="RightVBox" type="VBoxContainer" parent="RootContainer/MainHBox/RightPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="TrainerSection" type="VBoxContainer" parent="RootContainer/MainHBox/RightPanel/RightVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="SectionLabel" type="Label" parent="RootContainer/MainHBox/RightPanel/RightVBox/TrainerSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.913725, 0.117647, 0.388235, 1)
theme_override_font_sizes/font_size = 16
text = "TRAINER MENU"
vertical_alignment = 1
uppercase = true

[node name="BtnInventory" type="Button" parent="RootContainer/MainHBox/RightPanel/RightVBox/TrainerSection"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Inventory"

[node name="BtnTrophy" type="Button" parent="RootContainer/MainHBox/RightPanel/RightVBox/TrainerSection"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Trophy Room"

[node name="BtnSave" type="Button" parent="RootContainer/MainHBox/RightPanel/RightVBox/TrainerSection"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Save Game"

[node name="HSeparator" type="HSeparator" parent="RootContainer/MainHBox/RightPanel/RightVBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ShopSection" type="VBoxContainer" parent="RootContainer/MainHBox/RightPanel/RightVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="SectionLabel" type="Label" parent="RootContainer/MainHBox/RightPanel/RightVBox/ShopSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.913725, 0.117647, 0.388235, 1)
theme_override_font_sizes/font_size = 16
text = "SHOP & RESOURCES"
vertical_alignment = 1
uppercase = true

[node name="BtnUmaStore" type="Button" parent="RootContainer/MainHBox/RightPanel/RightVBox/ShopSection"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Uma Store"

[node name="BtnMarket" type="Button" parent="RootContainer/MainHBox/RightPanel/RightVBox/ShopSection"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Market"

[node name="BtnWarehouse" type="Button" parent="RootContainer/MainHBox/RightPanel/RightVBox/ShopSection"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Warehouse"

[node name="HSeparator2" type="HSeparator" parent="RootContainer/MainHBox/RightPanel/RightVBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TravelSection" type="VBoxContainer" parent="RootContainer/MainHBox/RightPanel/RightVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="SectionLabel" type="Label" parent="RootContainer/MainHBox/RightPanel/RightVBox/TravelSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.913725, 0.117647, 0.388235, 1)
theme_override_font_sizes/font_size = 16
text = "TRAVEL"
vertical_alignment = 1
uppercase = true

[node name="BtnStable" type="Button" parent="RootContainer/MainHBox/RightPanel/RightVBox/TravelSection"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Stable"

[node name="BtnStadium" type="Button" parent="RootContainer/MainHBox/RightPanel/RightVBox/TravelSection"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Stadium"

[node name="BtnCasino" type="Button" parent="RootContainer/MainHBox/RightPanel/RightVBox/TravelSection"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "Casino"

[node name="Spacer" type="Control" parent="RootContainer/MainHBox/RightPanel/RightVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="MoneyFooter" type="PanelContainer" parent="RootContainer/MainHBox/RightPanel/RightVBox"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="RootContainer/MainHBox/RightPanel/RightVBox/MoneyFooter"]
layout_mode = 2
color = Color(1, 0.95, 0.8, 1)

[node name="MarginContainer" type="MarginContainer" parent="RootContainer/MainHBox/RightPanel/RightVBox/MoneyFooter"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="RootContainer/MainHBox/RightPanel/RightVBox/MoneyFooter/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="RootContainer/MainHBox/RightPanel/RightVBox/MoneyFooter/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "FUNDS:"

[node name="LblMoney" type="Label" parent="RootContainer/MainHBox/RightPanel/RightVBox/MoneyFooter/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.960784, 0.631373, 0.0509804, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.235294)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 18
text = "$ 1,000,000"
horizontal_alignment = 2
vertical_alignment = 1
